fixed form alignment

--- a/client/form.css
+++ b/client/form.css
@@ -7,6 +7,7 @@
     width: 150px;
     vertical-align: top;
     color: black;
+    margin-left: 50px;
 }
 
 .input{
